# arxml_lang_server

./: Cargo.toml
src/: main.rs  xml_parser.rs
src/backend/: document_symbol.rs  goto_definition.rs  hover.rs  init.rs  language_server.rs  mod.rs  references.rs  symbol.rs
