[package]
name = "arxml_lang_server"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "arxml_lang_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dashmap = { version = "5.5.3", features = ["rayon"] }
glob = "0.3.1"
rayon = "1.10.0"
regex = "1.10.4"
roxmltree = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
# tower-lsp = "0.20.0"
tower-lsp = { git = "https://github.com/ebkalderon/tower-lsp.git", rev = "8fe0f21e9d386b6bf2561ee2bf9590d89724cf5a" }
